@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-10
-Date: 2008-04-28
+Date: 2008-05-01
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
